NMS-18153: Implement API to upload single/multiple eventconf files.(Implementations)